@@ -79,6 +79,8 @@ Bugfixes:
   * Fix a potential XSS issue that could affect some Special: pages.  Reported
     by an anonymous user.
   * When handling whitespace the parser should treat spaces and tabs equally.
+  * The parser should not generate edit links for invalid topic names such as
+    "[[Invalid>Topic]]".
 
 Translation Updates:
 
